--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <i class="fa-solid fa-crop"></i>
                     <h2>Cybersecurity consultant</h2>
 
-Deepak Mmm, [07-08-2022 12:50 PM]
+Sachin Mmm, [07-08-2022 12:50 PM]
 <p>Cybersecurity consultants identify problems, evaluate security issues, assess risk, and implement solutions to defend against threats to companies' networks and computer systems. They deal with many variables when evaluating security systems and craft layers of protection in a fast-changing IT landscape.</p>
                     <a href="#">Learn more</a>
                 </div>
